@@ -126,6 +126,7 @@ by dereine: Allow to expose sorts again.
 #557160 by joachim: Move docs/docs.php to views.api.php to match the drupal standard of hook documentation.
 #1100052 by michielnugter: Fix strict warning of views_handler_argument::get_value.
 #1023456 by dereine: Fix many_to_one_helper condition buidling.
+#1100738 by bojanz: Extend upgrading docs to include info about argument changes and get_value/sanitize_value.
 
 Views 3.x-7.x-alpha1 (05-Jan-2011)
 ==================================
